Fixing navbar esp on tablet-like screens

--- a/assets/commonstyles/globalstyles.css
+++ b/assets/commonstyles/globalstyles.css
@@ -165,9 +165,20 @@ ul li:last-child {
     color: rgba(255,33,33,0.9);
 }
 
+@media (max-width: 992px){
+    ul li{
+        text-align: center;
+        padding-bottom: 1vh;
+    }
+}
+
 @media (max-width: 992px) and (min-width: 768px){
+    ul li{
+        margin: 0 !important;
+    }
     ul li:last-child {
         text-align: center;
+        padding-left: 8vw;
         position: relative;
         width: 100%;
         display: flex;
